--- a/sections/proceedings.yml
+++ b/sections/proceedings.yml
@@ -1,4 +1,4 @@
-title: '{\addfontfeature{LetterSpace=-3.5}Материалы 10-й всероссийской научной конференции по проблемам информатики СПИСОК-2023}'
+title: '{\scalebox{0.95}[1.0]{\addfontfeature{LetterSpace=-3.0}Материалы 10-й всероссийской научной конференции по проблемам информатики СПИСОК-2023}}'
 sections:
   - s01
 #  - s02
